# Otus_Trie

./: .gitignore  CMakeLists.txt  README.md
TestData/: words.txt
headers/: PrefixTest.h  PrefixTree.h
headers/imported/: IHashTable.h  OpenHashTable.h
report/: output.txt  report.md
src/: Trie.cpp  main.cpp
